improvement(styles): various color, alignment, and font improvements and fixes

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@
     --primary: #818cf8;
     --secondary: #6366f1;
     --tertiary: #4f46e5;
+    --button-primary: var(--primary);
+    --button-secondary: var(--secondary);
+    --button-tertiary: var(--tertiary);
     --foreground: white;
 }
 
@@ -32,7 +35,7 @@ body {
     padding: 0.25rem 0.5rem;
     overflow: hidden;
     font-size: 0.875rem;
-    color: white;
+    color: var(--foreground);
     background-color: transparent;
     border-radius: 0.5rem;
     cursor: pointer;
@@ -63,7 +66,7 @@ body {
 button,
 select {
     color: var(--foreground);
-    background-color: var(--secondary);;
+    background-color: var(--button-primary);
     border-radius: 0.5rem;
     text-align: center;
     padding: 0.25rem;
@@ -73,7 +76,7 @@ select {
 
 button:hover,
 select:hover {
-    background-color: #3730A3;
+    background-color: var(--button-secondary);
 }
 
 button img {
@@ -94,7 +97,7 @@ button img {
     width: 100vw;
     padding: 0.5rem;
     border: 1px solid #60A5FA;
-    color: white;
+    color: var(--foreground);
 }
 
 .suggestions-box {
@@ -141,13 +144,15 @@ button img {
     overflow: hidden;
     background-color: #C7D2FE;
     font-size: 2xl;
-    color: var(--tertiary);;
+    color: var(--tertiary);
+    ;
     border-radius: 9999px;
     cursor: pointer;
 }
 
 .bookmark:hover {
-    background-color: var(--secondary);;
+    background-color: var(--secondary);
+    ;
 }
 
 .bookmark {
@@ -163,7 +168,8 @@ button img {
     padding: 0.5rem;
     width: 32pt;
     height: 32pt;
-    background-color: var(--tertiary);;
+    background-color: var(--tertiary);
+    ;
     border-radius: 0.5rem;
 }
 
@@ -235,7 +241,8 @@ ul {
     display: flex;
     padding-bottom: 0.25rem;
     width: 100%;
-    background-color: var(--primary);;
+    background-color: var(--primary);
+    ;
 }
 
 #userchrome button {
@@ -255,7 +262,8 @@ ul {
     padding-right: 0.375rem;
     margin-top: 0;
     align-items: center;
-    background-color: var(--primary);;
+    background-color: var(--primary);
+    ;
 }
 
 #tabs-bar {
@@ -295,8 +303,8 @@ ul {
     border-radius: 1.5rem;
     width: fit-content;
     height: fit-content;
-    color: #312E81;
-    background-color: var(--primary);;
+    color: var(--foreground);
+    background-color: var(--secondary);
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
@@ -312,7 +320,7 @@ ul {
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-template-rows: repeat(6, minmax(0, 1fr));
     height: 100vh;
-    background-color: var(--primary);;
+    background-color: var(--primary);
     backdrop-blur: blur(40px);
 }
 
@@ -321,13 +329,37 @@ ul {
     padding: 0.375rem;
     width: 100vw;
     height: 100vh;
-    color: #312E81;
-    background-color: var(--primary);;
+    color: var(--foreground);
+    background-color: var(--secondary);
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+#pref-tabs {
+    display: flex;
+}
+
+.pref-tab {
+    display: flex;
+    align-items: center;
+}
+
+#preferences-box button,
+select {
+    background-color: var(--button-secondary);
+}
+
+#preferences-box button:hover,
+select:hover {
+    background-color: var(--button-tertiary);
 }
 
 #preferences-box * {
     margin: 4pt;
+}
+
+.toggle-area {
+    display: flex;
+    align-content: center;
 }
 
 #experiments b {
@@ -335,7 +367,8 @@ ul {
 }
 
 #suggestions {
-    background-color: var(--primary);;
+    background-color: var(--primary);
+    ;
 }
 
 #welcomepage {
@@ -345,7 +378,8 @@ ul {
     border-bottom-left-radius: 0.125rem;
     width: 100%;
     height: fit-content;
-    background-color: var(--primary);;
+    background-color: var(--primary);
+    ;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
@@ -359,27 +393,27 @@ input[type="checkbox"] {
     cursor: pointer;
     transition: background 150ms ease-in-out;
     background: var(--foreground);
-  }
-  
-  input[type="checkbox"]::after {
+}
+
+input[type="checkbox"]::after {
     top: 0;
     left: 0;
     transition: left 150ms ease-in-out;
     content: ' ';
     width: 15px;
     height: 15px;
-    background: var(--secondary);
+    background: var(--tertiary);
     position: absolute;
     border-radius: 50px;
-  }
-  
-  input[type="checkbox"]:checked {
-    background: var(--tertiary);
-  }
-  
-  input[type="checkbox"]:checked::after {
+}
+
+input[type="checkbox"]:checked {
+    background: var(--primary);
+}
+
+input[type="checkbox"]:checked::after {
     left: calc(100% - 15px);
-  }
+}
 
 .hidden {
     display: none !important;
